--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -14,9 +14,10 @@ Copyright © 2017 Andy Sin. All rights reserved.
 
         <ui:define name="editableContent" >
 
-            <iframe width='97%' frameBorder='0' style='height: 60vh; margin: 25px 0;' 
-                    src='https://maps.darksky.net/@temperature,39.000,-95.000,4?embed=true&amp;timeControl=false&amp;fieldControl=false&amp;defaultField=temperature&amp;defaultUnits=_f'></iframe>
-
+            <div align="center">
+                <iframe width='90%' frameBorder='0' style='height: 60vh; margin: 25px 0;' 
+                        src='https://maps.darksky.net/@temperature,39.000,-95.000,4?embed=true&amp;timeControl=false&amp;fieldControl=false&amp;defaultField=temperature&amp;defaultUnits=_f'></iframe>
+            </div>
         </ui:define>
 
     </ui:composition>
