--- a/web/WeatherForecastResults.xhtml
+++ b/web/WeatherForecastResults.xhtml
@@ -36,9 +36,19 @@ Copyright © 2017 Andy Sin. All rights reserved.
                         <h:outputText value="#{searchedWeatherController.searchResults.weatherDescription}" />
 
                         <!-- Columns 1 & 2 -->
-                        <h:outputText value="Temperature: " />  
+                        <h:outputText value="Current Temperature: " />  
                         <h:outputText value="#{searchedWeatherController.searchResults.celsius} °C 
                                       / #{searchedWeatherController.searchResults.fahrenheit} °F" />  
+
+                        <!-- Columns 1 & 2 -->
+                        <h:outputText value="Minimum Temperature: " />  
+                        <h:outputText value="#{searchedWeatherController.searchResults.celsiusMin} °C 
+                                      / #{searchedWeatherController.searchResults.fahrenheitMin} °F" />  
+
+                        <!-- Columns 1 & 2 -->
+                        <h:outputText value="Maximum Temperature: " />  
+                        <h:outputText value="#{searchedWeatherController.searchResults.celsiusMax} °C 
+                                      / #{searchedWeatherController.searchResults.fahrenheitMax} °F" />  
 
                     </h:panelGrid>
                     <br />
