--- a/web/WeatherForecastResultsError.xhtml
+++ b/web/WeatherForecastResultsError.xhtml
@@ -22,7 +22,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 <h:form id="WeatherResultsErrorForm">
                     <h1>Error</h1>
                     <br />
-                    <h:outputText value="Your input &quot;#{searchedWeatherController.searchQuery}&quot; could not be processed. " />         
+                    <h:outputText value="Your input could not be processed. " />         
                     <br />
                     <h:outputText value="The location was not recognized. Check spelling?" />
 
