nvm apparently disabling ALSO breaks the bean...fixed

--- a/web/Search.xhtml
+++ b/web/Search.xhtml
@@ -53,11 +53,11 @@ Copyright © 2017 Andy Sin. All rights reserved.
                         <input id="geocomplete" type="text" placeholder="Type in an address" size="90" />
 
                         <div class="latlng">
-                            <h:inputText id="searchQueryFieldLat" class="lat" disabled="true"
+                            <h:inputText id="searchQueryFieldLat" class="lat"
                                          value="#{searchedWeatherController.searchLatitude}">
                             </h:inputText>
 
-                            <h:inputText id="searchQueryFieldLng" class="lng" disabled="true"
+                            <h:inputText id="searchQueryFieldLng" class="lng"
                                          value="#{searchedWeatherController.searchLongitude}">
                             </h:inputText>
                         </div>
