--- a/web/CheckWeather.xhtml
+++ b/web/CheckWeather.xhtml
@@ -17,19 +17,35 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
         <!-- Create the content for this page below -->
         <ui:define name="editableContent">
+            <script type="text/javascript" src='http://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyCs6hxbEQ4A-fQ1ghb1KIPEAMcWfNYjMlk'></script>
+
+            <script src="resources/js/jquery.geocomplete.js" type="text/javascript"></script>
+
+
+            <script>
+                $(document).ready(function () {
+                    $("#geocomplete").geocomplete({
+                        details: ".latlng",
+                        detailsAttribute: "class",
+                        types: ["geocode", "establishment"]
+                    });
+
+                    $(".commandButton").click(function () {
+                        $(this).parents(".location").find("#geocomplete").trigger("geocode");
+                    });
+                });
+            </script>
             <div align="center"> <h2>Check Weather For Your Event</h2></div>
             <div align="center" style="width:40%; background-color: #DCDCDC; margin:0 auto;">
                 <h:form>
                     <br/>
                     <table cellspacing="10">
                         <tr>
-                            <td align="right"><h:outputLabel class="field-label" value="Location:" for="location" /></td>
+                            <td align="right"><h:outputLabel class="field-label" value="Location:" for="geocomplete" /></td>
 
 
                             <td align="left">
-                                <p:inputText id="location" value="#{loginManager.username}" required="true" 
-                                             requiredMessage="#{bundle.CreateCustomerRequiredMessage_username}" label="Location">
-                                </p:inputText>
+                                <input id="geocomplete" style="width: 300px; height:20px" type="text"/>
                             </td>
 
                         </tr>
@@ -40,12 +56,12 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
 
                             <td align="left">
-                                <p:calendar id="eventDay" pattern="MM/dd/yyyy" value="#{publicVideoController.selected.datePublished}" 
-                                            title="#{bundle.CreatePublicVideoTitle_datePublished}" required="true" 
-                                            requiredMessage="#{bundle.CreatePublicVideoRequiredMessage_datePublished}" showOn="button"/>
+                                <p:calendar id="eventDay" pattern="MM/dd/yyyy"  
+                                            required="true" 
+                                            showOn="button"/>
                             </td>
                         </tr>
-                        
+
                         <tr>
                             <td align="right">
                                 <h:outputLabel class="field-label" value="Start Time:" for="startTime" />
@@ -53,12 +69,12 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
 
                             <td align="left">
-                                <p:calendar id="startTime" pattern="HH:mm" timeOnly="true" value="#{publicVideoController.selected.datePublished}" 
-                                            title="#{bundle.CreatePublicVideoTitle_datePublished}" required="true" 
-                                            requiredMessage="#{bundle.CreatePublicVideoRequiredMessage_datePublished}" showOn="button"/>
+                                <p:calendar id="startTime" pattern="HH:mm" timeOnly="true" 
+                                            required="true" 
+                                            showOn="button"/>
                             </td>
                         </tr>
-                        
+
                         <tr>
                             <td align="right">
                                 <h:outputLabel class="field-label" value="End Time:" for="endTime" />
@@ -66,14 +82,23 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
 
 
                             <td align="left">
-                                <p:calendar id="endTime" pattern="HH:mm" timeOnly="true" value="#{publicVideoController.selected.datePublished}" 
-                                            title="#{bundle.CreatePublicVideoTitle_datePublished}" required="true" 
-                                            requiredMessage="#{bundle.CreatePublicVideoRequiredMessage_datePublished}" showOn="button"/>
+                                <p:calendar id="endTime" pattern="HH:mm" timeOnly="true"
+                                            required="true" 
+                                            showOn="button"/>
                             </td>
                         </tr>
                     </table>
+                    <div class="latlng" style="display:none;">
+                        <h:inputText id="searchQueryFieldLat" class="lat"
+                                     value="#{searchedWeatherController.searchLatitude}">
+                        </h:inputText>
+
+                        <h:inputText id="searchQueryFieldLng" class="lng"
+                                     value="#{searchedWeatherController.searchLongitude}">
+                        </h:inputText>
+                    </div>
                     <br/>
-                    <p:commandButton id="check" class="button" value="Check" action="#{loginManager.createCustomer()}" ajax="false"/>
+                    <p:commandButton id="check" class="button" value="Check" action="#{searchedWeatherController.getForecast()}" ajax="false"/>
 
                     <br/>
                 </h:form>
