--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -27,7 +27,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 <br></br><br></br>
                 <br></br><br></br>
                 
-                <p:button styleClass="index_signup" outcome="Search" value="TRY IT NOW"/>
+                <p:button styleClass="index_signup" outcome="CheckWeather" value="TRY IT NOW"/>
 
                 <br></br><br></br>
                 
