--- a/web/SignIn.xhtml
+++ b/web/SignIn.xhtml
@@ -54,7 +54,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         </tr>
                     </table>
                     <br/>
-                    <p:button id="create" class="login" value="LOG IN" onclick="#{loginManager.createCustomer()}"/>
+                    <p:commandButton id="create" class="login" value="LOG IN" onclick="#{loginManager.createCustomer()}"/>
                     <br/>
                     <br/>
                 </h:form>
