--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -46,16 +46,19 @@ Copyright © 2017 Andy Sin. All rights reserved.
             <div id="bottomMain">
                 <br></br>
                 <index_bottom_header>Sign up for free and immediately get access to:</index_bottom_header>
-                <ul style="text-align: left; column-count: 4; column-gap: 35px; padding-left: 20px; width: auto">
+                <ul style="text-align: left; column-count: 2; column-gap: 35px; padding-left: 300px; width: auto">
                     <li type="circle">Personalized Activity Calendar</li>
                     <br></br>
                     <li type="circle">Easy to use interface</li>
                     <br></br>
                     <li type="circle">Real-Time Severe Weather Alerts</li>
                     <br></br>
+                    <li type="circle">Minute-By-Minute Forecast Accuracy</li>
+                    <br></br>
                     <li type="circle">Email Reminder Notifications</li>
+                    <br></br>
+                    <li type="circle">And Much More!</li>
                 </ul>
-                
             </div>
            
         </ui:define>
