minor change for button to say "CHECK" instead of "SEARCH"

--- a/web/CheckWeather.xhtml
+++ b/web/CheckWeather.xhtml
@@ -90,7 +90,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                         </h:inputText>
                     </div>
                     <br/>
-                    <p:commandButton id="check" class="login" value="SEARCH" action="#{searchedWeatherController.getForecast()}" ajax="false"/>
+                    <p:commandButton id="check" class="login" value="CHECK" action="#{searchedWeatherController.getForecast()}" ajax="false"/>
 
                     <br/>
                 </h:form>
