Disabled multiday event forecast for non-users + some validation checks

--- a/web/CheckWeather.xhtml
+++ b/web/CheckWeather.xhtml
@@ -35,7 +35,7 @@ Copyright © 2017 Akhil Gangu. All rights reserved.
                     });
                 });
             </script>
-            
+            <p:growl id="growl" life="7000"/>
             <div align="center"><index_header>Check Weather For Your Event</index_header></div>
             <br/>
             <div align="center" style="width:40%; background-color: #FEFEFE; margin:0 auto;">
