--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -49,7 +49,7 @@ Copyright © 2017 Andy Sin. All rights reserved.
                 <ul style="text-align: left; column-count: 2; column-gap: 35px; padding-left: 300px; width: auto">
                     <li type="circle">Personalized Activity Calendar</li>
                     <br></br>
-                    <li type="circle">Easy to use interface</li>
+                    <li type="circle">Multiday Event Forecast</li>
                     <br></br>
                     <li type="circle">Real-Time Severe Weather Alerts</li>
                     <br></br>
