Sign In. Header changes for Sign In. Start of User Home Page.

--- a/web/UserHomePage.xhtml
+++ b/web/UserHomePage.xhtml
@@ -17,7 +17,7 @@ Copyright © 2017 Osman Balci. All rights reserved.
 
             <div id="topMain">
 
-                <index_header>Weather-Proof Activity Planner</index_header>
+                <index_header>User Area Weather Goes Here</index_header>
 
                 
 
